snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-sources.jar.sha1
fbcacbc46e19ff2b356c6c4981fe7b8c65068fcd